--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -80,6 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        tools:listitem="@layout/note_item_layout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:paddingBottom="5dp"
         android:transitionGroup="false">
@@ -143,8 +144,7 @@
             android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:layout_gravity="center_vertical"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-            />
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
 
     </LinearLayout>
 
